# korug

./: .env.example  .env.local  .flake8  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  PHASE_1_SUMMARY.md  PHASE_2_COMPLETE.md  PHASE_3_INTEGRATION.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  docker.yml  lint.yml  test.yml  tests.yml
docker/: .env.docker  Dockerfile  docker-compose.override.yml  docker-compose.yml
docs/: API.md  ARCHITECTURE.md  AUTH.md  CLI.md  INSTALLATION.md  QUICKSTART.md  README.md  USER_GUIDE.md
frontend/: .env.example  .eslintrc.cjs  .gitignore  Dockerfile  README.md  REDESIGN.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src/korug/: __init__.py  audit.py  auth.py  auth_utils.py  cli.py  config.py  db.py  main.py  run.py  scheduler.py  token_blacklist.py  users.py
src/subdomain_hunter/: audit.py  auth.py  auth_utils.py  cli.py  config.py  db.py  main.py  scheduler.py  token_blacklist.py  users.py
tests/: conftest.py  test_access_control.py  test_api.py  test_bucket_enum.py  test_certificates.py  test_certstream_monitor.py  test_changes.py  test_discovery.py  test_dns_bruteforce.py  test_enrichment.py  test_nuclei.py  test_port_scan.py  test_scope.py  test_takeover_detection.py  test_takeover_fingerprints.py  test_tls_audit.py  test_users_integrations.py
(+98 files in other folders)
